--- a/main.tex
+++ b/main.tex
@@ -33,13 +33,13 @@
 \mainmatter
 
 % Capítulos da monografia:
-%\include{capitulos/cap01-introducao}
+\include{capitulos/cap01-introducao}
 
 %\include{capitulos/cap02-fund-teorica} % Esse capítulo e nome é apenas uma sugestão.
 %\include{capitulos/cap03-historico}
 %\include{capitulos/cap04-trabalhos-relacionados} % Esse capítulo e nome é apenas uma sugestão.
 %\include{capitulos/cap05-proposta} % Esse capítulo e nome é apenas uma sugestão (bom para TCC 1).
-\include{capitulos/cap06-metodologia} % Esse capítulo e nome é apenas uma sugestão.
+%\include{capitulos/cap06-metodologia} % Esse capítulo e nome é apenas uma sugestão.
 %\include{capitulos/cap-experimentos-resultados} % Esse capítulo e nome é apenas uma sugestão.
 %\include{capitulos/cap-conclusoes} % Esse capítulo e nome é apenas uma sugestão.
 
