não aguento mais arrumar

--- a/capitulos/cap02-fund-teorica.tex
+++ b/capitulos/cap02-fund-teorica.tex
@@ -97,3 +97,11 @@ A placa apresenta, na sua versão 2, um processador quad-core de 900mhz  Broadco
 \end{figure}
 
 \section{Mapas georreferenciados}
+Para \cite{Meng2014}, georreferenciamento é "alinhar dados geográficos com um sistema de coordenadas conhecidos para que possa ser pesquisado, visualizado e analisado com outros dados geográficos". O processo de identificar um objeto geográfico e relaciona-lo a uma locação geográfica é chamado de \textit{matching}\footnote{casar,igualar, combinar}. Georreferenciamento  normalmente usa um sistema de referencia chamado \textit{WGS-84}, que constrói coordenadas padronizadas para a terra, em adição, alguns dispositivos de navegação são utilizados para coletar dados e atrela-los ao processo de construção do mapa. A combinação de dados provenientes de GPS em combinação com \textit{WGS-84}, podem referenciar a um certo ponto geográfico no mapa \ref{fig:mapa:georef}. Esse tipo de mapa pode combinar dados e imagens capturados por satélite, aeronaves ou veículos aéreos não tripulados. 
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{figuras/Screen Shot 2016-05-12 at 3.25.21 PM.png}
+    \caption{Mapa georreferenciado combinando dados de um GPS acoplado a um carro}
+    \label{fig:mapa:georef}
+\end{figure}
