--- a/main.bib
+++ b/main.bib
@@ -247,3 +247,17 @@ volume = {7},
 journal = {International Journal of Engineering Pedagogy (iJEP)},
 doi = {10.3991/ijep.v7i2.6845}
 }
+
+@article{Meng2014,
+author = {Andreas Hackeloeer},
+title = {Georeferencing: a review of methods and applications},
+journal = {Annals of GIS},
+volume = {20},
+number = {1},
+pages = {61-69},
+year  = {2014},
+publisher = {Taylor & Francis},
+doi = {10.1080/19475683.2013.868826},
+URL = {https://doi.org/10.1080/19475683.2013.868826},
+eprint = {https://doi.org/10.1080/19475683.2013.868826}
+}
