--- a/capitulos/cap04-trabalhos-relacionados.tex
+++ b/capitulos/cap04-trabalhos-relacionados.tex
@@ -10,7 +10,7 @@ Dadas as limitações causadas por veículos articulados comumente usados na agr
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.75\textwidth]{figuras/robo bach.png}
-    \caption{Esquema do chassi}
+    \caption{Esquema do chassi proposto}
     \label{fig:chassi:robo}
 \end{figure}
 Para controle direcional utilizando os dois motores acoplados as rodas, foram criados modelos matemáticos que possibilitam calcular a rotação do robô tendo em vista a velocidade angular das rodas.
@@ -19,7 +19,7 @@ O algoritmo usado neste trabalho consiste em transformar o polígono descrito em
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.75\textwidth]{figuras/matrizesPoligno.png}
-    \caption{Esquema do chassi}
+    \caption{Matrizes poligonais}
     \label{fig:matriz:poligono}
 \end{figure}
 \section{Autonomous Maneuvers of a Robotic Tractor for
@@ -27,7 +27,7 @@ Farming}
 
 Com objetivo de diminuir a carga de trabalho dos trabalhadores rurais, a solução apresentada por \cite{Wang2016} aborda o controle de manobras para um trator de 4 rodas feito para trabalhar em plantações enfileiradas, bem como testes feitos em tipos diferentes de solo para avaliar a performance do mesmo.
 
-O sistema foi construído utilizando um trator do modelo EG105 fabricado pela \textit{YANMAR} \ref{fig:yanmar:eg105} no Japão, além de cervos para controlar os ângulos de direção do mesmo. Para um posicionamento mais refinado do trator, utilizaram-se ainda um\textit{Real Time Kinematic Global Positioning System}(RTK-GPS) com a adição de dados de correção oriundas de uma rede chamada \texit{GPS Earth Observation Network}(GEONET)  disponível no Japão. 
+O sistema foi construído utilizando um trator do modelo EG105 fabricado pela \textit{YANMAR} \ref{fig:yanmar:eg105} no Japão, além de cervos para controlar os ângulos de direção do mesmo. Para um posicionamento mais refinado do trator, utilizaram-se ainda um\textit{Real Time Kinematic Global Positioning System} (RTK-GPS) com a adição de dados de correção oriundas de uma rede chamada \texit{GPS Earth Observation Network}(GEONET)  disponível no Japão. 
 
 \begin{figure}[H]
     \centering
