--- a/main.bib
+++ b/main.bib
@@ -261,3 +261,12 @@ doi = {10.1080/19475683.2013.868826},
 URL = {https://doi.org/10.1080/19475683.2013.868826},
 eprint = {https://doi.org/10.1080/19475683.2013.868826}
 }
+@Booklet{Viana2009,
+  author   = {Álvaro A. N. Viana , João Cruz Reis Filho, Katia Marzall, Marilena A. F. Holanda and Ricardo Cavalcanti Júnior},
+  editor   = {Assessoria de Comunicação Social},
+  title    = {Agricultura Agricultura de Precisão},
+  year     = {2009},
+  subtitle = {Boletim Técnico},
+  pages    = {31},
+  url      = {http://www.agricultura.gov.br/assuntos/insumos-agropecuarios/arquivos-publicacoes-insumos/agric_precisao.pdf},
+}
