--- a/capitulos/cap01-introducao.tex
+++ b/capitulos/cap01-introducao.tex
@@ -1,12 +1,12 @@
 \chapter{Introdução}
 \label{cap:introducao}
 
-A mecanização agraria vem se tornando um fator decisivo quanto ao aumento da produção de alimentos, já que, ao passar de cada ano, as demandas por produtos provenientes do campo vem aumentando. Ao mesmo tempo, a mão de obra do campo vem diminuindo em um passo constante nos últimos anos, tornando um desafio manter taxas de produção nos mesmos níveis. Contudo, novas filosofias de trabalho vem sendo assimiladas da industria para o campo. A utilização de sistemas de informação que conseguem gerar relatórios sobre produtividade e o consumo de insumos vem ajudando os produtores a tomarem decisões mais acertadas quanto a sua terra. 
+A mecanização agrária vem se tornando um fator decisivo quanto ao aumento da produção de alimentos, já que, ao passar de cada ano, as demandas por produtos provenientes do campo vem aumentando. Ao mesmo tempo, a mão de obra do campo vem diminuindo em um passo constante nos últimos anos, tornando um desafio aumentar taxas de produção nos mesmos níveis. Contudo, novas filosofias de trabalho vem sendo disseminadas da industria para o campo. A utilização de sistemas de informação que conseguem gerar relatórios sobre produtividade e o consumo de insumos vem ajudando os produtores a tomarem decisões mais acertadas quanto a sua terra. 
 
-Com a agricultura de precisão é possível que aja controle sobre cada aspecto do solo a ser utilizado, mas não de forma mediana como de costume, onde todo o campo é tratado da mesma forma, mas sim, de forma a que cada espaço do campo seja manejado de forma independente e única, saciando as necessidades daquele ponto. Esse tipo de estratégia tem elevado a produção ao mesmo tempo que diminui os gastos com insumos, combustível e problemas ambientais. A combinação de mecanização com a agricultura de precisão faz com que a produção do campo se assemelhe a produção industrial, seguindo padrões de qualidade, bem como utilizando ferramentas antes nunca utilizadas nesse meio a fim de aumentar a competitividade do agronegócio em beneficio da sociedade\cite{Viana2009}.
+Com a agricultura de precisão é possível que aja controle sobre cada aspecto do solo a ser utilizado, mas não de forma mediana como de costume, onde todo o campo é tratado da mesma forma, mas sim, de forma a que cada espaço do campo seja manejado de forma independente e única, saciando as necessidades daquele ponto. Esse tipo de estratégia tem elevado a produção ao mesmo tempo que diminui os gastos com insumos, combustível e problemas ambientais. A combinação de mecanização com a agricultura de precisão faz com que a produção do campo se assemelhe a produção industrial, seguindo padrões de qualidade, bem como utilizando ferramentas antes nunca utilizadas nesse meio a fim de aumentar a competitividade do agronegócio em benefício da sociedade\cite{Viana2009}.
 
-Automação de atividades humanas através de veículos vem sendo alvo de pesquisas desde o período entre Guerras. Já na década de 40, muitas nações já pesquisavam como automatizar ou ao menos controlar remotamente seus equipamentos, na maioria das vezes, com fins militares. Com o avanço tecnológico das décadas seguintes e a miniaturização dos componentes, foi possível que certo grau de automação fosse alcançados, inciando-se pela pesquisa do Shakey\cite{cassel:2017}, até a chegada no mercado de robôs patrulheiros e ajudantes hospitalares.
+Automação de atividades humanas através de veículos vem sendo alvo de pesquisas desde o período entre a Primeira e Segunda Guerra Mundiais(1918-1939). Já na década de 40, muitas nações já pesquisavam como automatizar ou ao menos controlar remotamente seus equipamentos, na maioria das vezes, com fins militares. Com o avanço tecnológico das décadas seguintes e a miniaturização dos componentes eletrônicos, foi possível que certo grau de automação fosse alcançados, inciando-se pela pesquisa do Shakey\cite{cassel:2017}, até a chegada no mercado de robôs patrulheiros e ajudantes hospitalares.
 
-O êxodo rural vem causando uma constante falta de mão de obra no campo, dando a entender que, em um futuro não muito distante, a resposta para tal problema seja a combinação da mecanização, agricultura de precisão e a automação desses veículos e implementos. Existem várias áreas de pesquisa em termos de automação agrícola, onde empresas do ramo vem adaptando ou criando novos veículos capazes de operar por horas sem interferência humana, apenas sendo "vigiados" por operadores que conseguem controlar N veículos por vez.
+O êxodo rural vem causando uma constante falta de mão de obra no campo, possivelmente, em um futuro não muito distante, a resposta para tal problema seja a combinação da mecanização, agricultura de precisão e a automação dos veículos e implementos. Existem várias áreas de pesquisa em termos de automação agrícola, onde empresas do ramo vem adaptando ou criando novos veículos capazes de operar por horas sem interferência humana, apenas sendo "vigiados" por operadores que conseguem controlar N veículos por vez.
 
-Este trabalho vem com o intuito de estudar se é fazível a ideia de um veículo autônomo terrestre movido a energia solar que seja capaz de exercer tarefas no campo sem que seja controlado ostensivamente por um operador humano. A descrição do hardware a ser utilizado, um pequeno estudo sobre a as demandas e a possível solução em relação a utilização de um sistema fotovoltaico e a criação da solução em forma de software serão detalhadas nas seguintes seções, bem como um pequeno e simplístico histórico sobre a automação de veículos datando desde a década de 1920 até os dias atuais.
+Este trabalho têm o intuito de estudar se é possível construir de um veículo autônomo terrestre de baixo custo movido a energia solar que seja capaz de exercer tarefas no campo sem que seja controlado ostensivamente por um operador humano. A descrição do hardware a ser utilizado, um pequeno estudo sobre a as demandas e a possível solução em relação a utilização de um sistema fotovoltaico e a criação da solução em forma de software serão detalhadas nas seguintes seções, bem como um pequeno histórico sobre a automação de veículos datando desde a década de 1920 até os dias atuais.
