--- a/main.bib
+++ b/main.bib
@@ -270,3 +270,18 @@ eprint = {https://doi.org/10.1080/19475683.2013.868826}
   pages    = {31},
   url      = {http://www.agricultura.gov.br/assuntos/insumos-agropecuarios/arquivos-publicacoes-insumos/agric_precisao.pdf},
 }
+@Online{Buchmann2017,
+  author   = {Isidor Buchmann},
+  title    = {What’s the Best Battery?},
+  year     = {2017},
+  date     = {2018-03-21},
+  url      = {https://batteryuniversity.com/learn/archive/whats_the_best_battery},
+  language = {Inglês},
+}
+
+@Online{Materia2017,
+  author = {Toda Matéria},
+  title  = {Agricultura Familiar},
+  year   = {2017},
+  url    = {https://www.todamateria.com.br/agricultura-familiar/},
+}
