--- a/capitulos/cap05-proposta.tex
+++ b/capitulos/cap05-proposta.tex
@@ -2,23 +2,25 @@
 \chapter{Proposta}
 \label{cap:proposta}
 
-O êxodo rural corresponde ao processo de migração em massa da população de campo para as cidades, fenômeno que costuma acontecer em períodos de tempo considerados curtos, com prazo de algumas décadas. Trata-se de um elemento diretamente associado a várias dinâmicas socioespaciais, tais como a urbanização, a industrialização, a concentração fundiária e a mecanização do campo.\cite{Pena2013}
+O êxodo rural corresponde ao processo de migração em massa da população de campo para as cidades, fenômeno que costuma acontecer em períodos de tempo considerados curtos, com prazo de algumas décadas. Trata-se de um elemento diretamente associado a várias dinâmicas socioespaciais, tais como a urbanização, a industrialização, a concentração fundiária e a mecanização do campo\cite{Pena2013}.
 
-Nos períodos de entre 1950 e 1980 o êxodo rural brasileiro chegou ao seu pico onde aproximadamente 30\% da população rural migraram para as cidades. Na ultima década, a migração perdeu velocidade, mas continuou a representar uma grande mudança no ambiente rural, onde 5,6 milhões de pessoas, 17,6\% da população rural, mudou-se para a cidade.\cite{Marra2011}
+Nos períodos de entre 1950 e 1980 o êxodo rural brasileiro chegou ao seu pico onde aproximadamente 30\% da população rural migraram para as cidades. Na ultima década, a migração perdeu velocidade, mas continuou a representar uma grande mudança no ambiente rural, onde 5,6 milhões de pessoas, 17,6\% da população rural, mudou-se para a cidade\cite{Marra2011}.
 
-Os motivos para tal ocorrência são inúmeros, dentre eles: melhores condições de vida na cidade, o fim de unidades de produção familiares compradas por grandes latifundiários, queda na fecundidade e massiva mecanização das operações agrícolas.
+Os motivos para tal ocorrência são vários, dentre eles: melhores condições de vida na cidade, o fim de unidades de produção familiares substituídas por grandes latifúndios, queda na fecundidade e massiva mecanização das operações agrícolas.
 
-Com enxada, foice e demais ferramentas, uma família não é capaz de cultivar três de acres de terra. Essa é uma das razões pelas quais tanto os agricultores familiares quanto assentados pedem veementemente para o governo para linhas de créditos a fim de se adequar a corrente de mecanização. \cite{Alves2013}
+Com enxada, foice e demais ferramentas, uma família não é capaz de cultivar 12140,6 metros quadrados(3 acres) de terra. Essa é uma das razões pelas quais tanto os agricultores familiares quanto assentados pedem veementemente para o governo para linhas de créditos a fim de se adequar a corrente de mecanização \cite{Alves2013}.
 
-As máquinas e os equipamentos são indispensáveis para se realizarem tarefas dentro de um calendário ótimo e de acordo com as exigências de qualidade e do clima. Dão conforto aos trabalhadores e protegem sua saúde na aplicação de agrotóxicos, por exemplo. No caso de grãos, sem as plantadeiras de alta precisão, não se obtêm níveis remuneradores de produtividade. As colheitadeiras permitem realizar as tarefas num calendário compatível com as exigências dos mercados interno e externo. Na produção de leite, a ordenhadeira é fundamental para se obter nível de qualidade exigido e é importante para se obter o nível de qualidade exigido e é importante para reduzir o esforço dos trabalhadores. O Brasil dispõe de vastas áreas, dentro da fronteira agrícola já ocupada e em termos de terras degradadas, para se incorporarem à agricultura comercial. Pelos métodos manuais, tal incorporação é impossível, tanto tecnicamente como também porque grande parte da população foi drenada para as cidades. Assim a expansão da agricultura requer a mecanização.
+As máquinas e os equipamentos são indispensáveis para se realizarem tarefas dentro de um calendário ótimo e de acordo com as exigências de qualidade e do clima. Dão conforto aos trabalhadores e protegem sua saúde na aplicação de agrotóxicos, por exemplo. No caso de grãos, sem as plantadeiras de alta precisão, não se obtêm níveis remuneradores de produtividade. As colheitadeiras permitem realizar as tarefas num calendário compatível com as exigências dos mercados interno e externo. Na produção de leite, a ordenhadeira é fundamental para se obter nível de qualidade exigido  e é importante para reduzir o esforço dos trabalhadores. O Brasil dispõe de vastas áreas, dentro da fronteira agrícola já ocupada e em termos de terras degradadas, para se incorporarem à agricultura comercial. Pelos métodos manuais, tal incorporação é impossível, tanto tecnicamente como também porque grande parte da população foi drenada para as cidades. Assim a expansão da agricultura requer a mecanização.
 
-A agricultura de precisão e uma filosofia de gerenciamento agrícola que parte de informações exatas, precisas e se completa com decisões exatas. Agricultura de precisão, também chamada de AP, é uma maneira de gerir um campo produtivo metro a metro, levando em conta o fato de que cada pedaço da fazenda tem propriedades diferentes.\cite{Tschiedel2002}
+A agricultura de precisão e uma filosofia de gerenciamento agrícola que parte de informações exatas, precisas e se completa com decisões exatas. Agricultura de precisão, também chamada de AP, é uma maneira de gerir um campo produtivo metro a metro, levando em conta o fato de que cada pedaço da fazenda tem propriedades diferentes\cite{Tschiedel2002}. Além disso, é também um sistema de manejo de produção integrado, que tenta igualar o tipo e a quantia de insumos que entram na propriedade com as necessidades da cultura em pequenas áreas dentro de um campo da propriedade. Para tal, essa filosofia anda de mão dadas com outras tecnologias: sensoriamento remoto, sistemas de informações geográficas(SIG) e de posicionamento global(GSP). A junção das tecnologias com esse tipo de pensamento pode vir a reduzir riscos nas atividades agrícolas, reduzir custo, ajudar na tomada de decisões, maior produtividade e menor impacto ambiental.
 
-A agricultura de precisão é um sistema de manejo de produção integrado, que tenta igualar o tipo e a quantia de insumos que entram na propriedade com as necessidades da cultura em pequenas áreas dentro de um campo da propriedade. Para tal, essa filosofia anda de mão dadas com outras tecnologias: sensoriamento remoto, sistemas de informações geográficas(SIG) e de posicionamento global(GSP). A junção das tecnologias com esse tipo de pensamento pode vir a reduzir riscos nas atividades agrícolas, reduzir custo, ajudar na tomada de decisões, maior produtividade e menor impacto ambiental.
+%https://www.todamateria.com.br/agricultura-familiar/
+A agricultura familiar é um tipo  de agricultura em pequenas propriedades rurais, onde as famílias e poucos empregados são responsáveis por gerir a colheita e a plantação. Nesse processo, técnicas de cultivo e extrativismo que englobam técnicas tradicionais e conhecimento popular estão presentes\cite{Materia2017}. Apesar de serem responsáveis por grande parte da produção de alimentos, esse tipo de empreitada não possui os recursos que os grandes latifúndios tem, resultado na baixa mecanização, bem como menor produção se comparada aos outros. Além disso, o número de integrantes de uma família vem diminuindo, consequentemente, diminuindo a força de trabalho disponível.  Por isso a ideia de um veículo autônomo terrestre de baixo custo para tais empreitadas se torna interessante, pois, não se comparam em questão de preço a outras empreitadas, como da Jacto ou New Holland, que giram em torno dos milhões, inviabilizando a compra e manutenção por parte dos agricultores familiares. Logo, um projeto simples e que não custe valores altos é interessante.
+
 %apresentar a ideia
 Com advento da mecanização agrária, da agricultura de precisão e da constante diminuição da população rural, consequentemente, da mão de obra, a automação do campo vem como ideia plausível e factível de como resolver e incorporar tais aspectos nos próximos anos na já industrializada produção do campo. Tendo em vista os vários frontes de pesquisa na área da automação agrária, é concebível a criação de um veículo autônomo terrestre que possa exercer certas funções no campo sem a interferência humana. 
 
-Para tal, é necessário um algoritmo robusto, capaz de interpretar os dados dos sensores, bem como dados do GPS, combinando-os com mapas georreferenciados para que possa traçar um caminho seguro, seja ele de translado ou mesmo durante as tarefas no campo \ref{fig:entrada:saida}. O algoritmo deve ser capaz de, mediante obstáculos, recalcular sua rota, evitando o obstáculo e continuar seu trabalho, evitando danos ao próprio veiculo, a outros veículos ou até mesmo pessoas. Em adição, o algoritmo deve ser capaz de saber sua localização em relação a área de operação, tomando decisões de como atingi-la com certo nível de precisão. Em relação a área e operação, o veículo deve ser capaz de navegar por toda a área sem passar pelo mesmo caminho, evitando desperdício de recursos e de tempo.
+Para tal, é necessário um algoritmo robusto, capaz de interpretar os dados dos sensores, bem como dados do GPS, combinando-os com mapas georreferenciados para que possa traçar um caminho seguro, seja ele de translado ou mesmo durante as tarefas no campo Figura \ref{fig:entrada:saida}. O algoritmo deve ser capaz de, mediante obstáculos, recalcular sua rota, evitando o obstáculo e continuar seu trabalho, evitando danos ao próprio veiculo, a outros veículos ou até mesmo pessoas. Em adição, o algoritmo deve ser capaz de saber sua localização em relação a área de operação, tomando decisões de como atingi-la com certo nível de precisão. Em relação a área e operação, o veículo deve ser capaz de navegar por toda a área sem passar pelo mesmo caminho, evitando desperdício de recursos e de tempo.
 
 \begin{figure}[H]
     \centering
@@ -49,21 +51,21 @@ O algoritmo deve, de forma constante, medir a distância entre o seu ponto de de
 
 
 
-A ideia da criação de um veículo dessa categoria une a mecanização com a agricultura de precisão, tendo em vista a união dos dois mundos na criação de um equipamento que possa, através de sensores, compreender o ambiente ao seu redor, bem como combinar dados provenientes de GPSs para que se situe dentro de uma área pré-estabelecida e possa, com segurança, exercer suas funções durantes horas, quiçá dias, dadas boas condições de operação. O Brasil é um país de dimensões continentais do clima variando entre o equatorial até o semiárido com grande incidência de raios solares e combinando isso ao ambiente de operação, a utilização de fontes de energia provenientes da luz solar se torna interessante e implementável.
+A ideia da criação de um veículo dessa categoria une a mecanização com a agricultura de precisão, tendo em vista a criação de um equipamento que possa, através de sensores, compreender o ambiente ao seu redor, bem como combinar dados provenientes de GPSs para que se situe dentro de uma área pré-estabelecida e possa, com segurança, exercer suas funções durantes horas, quiçá dias, dadas boas condições de operação. O Brasil é um país de dimensões continentais do clima variando entre o equatorial até o semiárido com grande incidência de raios solares e combinando isso ao ambiente de operação, a utilização de fontes de energia provenientes da luz solar se torna interessante e implementável.
 
-Em essência a utilização de sistemas fotovoltaicos, combinados a algoritmos de melhor caminho, sensores de distância, GPSs e um sistema de monitoramento que possa acompanhar o desempenho do veículo no campo, assim como em \textbf{4.3}, pode vir a culminar em um veículo terrestre de médio porte capaz de pulverizar, semear ou coletar informações sobre o campo.
+Em essência a utilização de sistemas fotovoltaicos, combinados a algoritmos de melhor caminho, sensores de distância, GPSs e um sistema de monitoramento que possa acompanhar o desempenho do veículo no campo, assim como em Figura \textbf{4.3}, pode vir a culminar em um veículo terrestre de médio porte capaz de pulverizar, semear ou coletar informações sobre o campo.
 
-A proposta a ser descrita idealiza um veículo de 4 rodas, movido por um único motor elétrico, sensores de ultrassônicos de distância, GPS e luzes, bem como painéis fotovoltaicos para produção de energia. A utilização de lagartas mecânicas foi descartada dada a complexidade da manutenção, a possibilidade de durante uma curva, uma das lagartas sair dos trilhos causando danos a suspensão e imobilizando o veiculo, bem como os danos causados ao solo. 
+A proposta a ser descrita idealiza um veículo de 4 rodas, movido por um  motor elétrico, sensores de ultrassônicos de distância, GPS e luzes, bem como painéis fotovoltaicos para produção de energia. A utilização de lagartas mecânicas foi descartada dada a complexidade da manutenção, a possibilidade de durante uma curva, uma das lagartas sair dos trilhos causando danos a suspensão e imobilizando o veículo, bem como os danos causados ao solo. 
 
-A figura \ref{fig:sketchup:vaa} apresenta uma visão geral do veículo, onde observa-se a maioria dos componentes externos: GPS, painel fotovoltaico e os sensores ultrassônicos. Logo abaixo do apoio superior, ficaram os demais componentes, tais como Arduinos, Pontes H, o \textit{shield} do GPS e outros servos. 
+A Figura \ref{fig:sketchup:vaa} apresenta uma visão geral do veículo, onde observa-se a maioria dos componentes externos: GPS, painel fotovoltaico e os sensores ultrassônicos. Logo abaixo do apoio superior, ficaram os demais componentes, tais como Arduinos, Pontes H, o \textit{shield} do GPS e outros servos. 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.75\textwidth]{figuras/chassi_vaa_completo.png}
-    \caption{Esquema do chassi feito no Sketchup}
+    \caption{Esquema do chassi feito no Sketchup\footnote{SketchUp é um software próprio para a criação de modelos em 3D no computador da Google}}
     \label{fig:sketchup:vaa}
 \end{figure}
-O veículo apresentado na figura \ref{fig:sketchup:vaa} sofrerá revisões ao longo do trabalho, principalmente em relação ao seu chassi, dado a necessidade de uma altura maior e espaço entre rodas. Contudo, a parte superior deve continuar nesse \textit{layout}.
-O veículo possuirá, inicialmente, 3 sensores ultrassônicos dispostos na frente do mesmo, afim de captar possíveis obstáculos em sua rota, fazendo com o veiculo seja capaz de realizar manobras para evitar colisões e manter-se em distância segura das plantas do campo. Na figura \ref{fig:ultrasonico:vaa} podemos observar o esquemático gerado no Fritzing\footnote{http://fritzing.org/home/} representando um Arduino UNO R3 e 3 sensores ultrassônicos HCSR05.
+O veículo apresentado na Figura \ref{fig:sketchup:vaa} sofrerá revisões ao longo do trabalho, principalmente em relação ao seu chassi, dado a necessidade de uma altura maior e espaço entre rodas. Contudo, a parte superior deve continuar nesse \textit{layout}.
+O veículo possuirá, inicialmente, 3 sensores ultrassônicos dispostos na frente do mesmo, afim de captar possíveis obstáculos em sua rota, fazendo com o veiculo seja capaz de realizar manobras para evitar colisões e manter-se em distância segura das plantas do campo. Na Figura \ref{fig:ultrasonico:vaa} podemos observar o esquemático gerado no Fritzing\footnote{http://fritzing.org/home/} representando um Arduino UNO R3 e 3 sensores ultrassônicos HCSR05.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{figuras/ULTRASSONICO.png}
@@ -71,7 +73,7 @@ O veículo possuirá, inicialmente, 3 sensores ultrassônicos dispostos na frent
     \label{fig:ultrasonico:vaa}
 \end{figure}
 
-O módulo GPS a ser usado será o GSM GPRS SIM808 em forma de\textit{ shield} que será acoplado diretamente ao Arduino, ilustrado na figura \ref{fig:gps:vaa}.
+O módulo GPS a ser usado será o GSM GPRS SIM808 em forma de\textit{ shield} que será acoplado diretamente ao Arduino, ilustrado na Figura \ref{fig:gps:vaa}.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.3\textwidth]{figuras/ARDUINOGPS.png}
@@ -79,9 +81,9 @@ O módulo GPS a ser usado será o GSM GPRS SIM808 em forma de\textit{ shield} qu
     \label{fig:gps:vaa}
 \end{figure}
 
-Com a utilização do módulo GPS em conjunção com os dados de um mapa georreferenciado, fica possível calcular posições e distancias em relação das posições a serem alcançadas. O GPS é uma peça de extrema importância nesse sistema, já que proverá informações importantes para que o sistema consiga, com certa precisão, atingir os objetivos.
+Com a utilização do módulo GPS em conjunção com os dados de um mapa georreferenciado, fica possível calcular posições e distâncias em relação das posições a serem alcançadas. O GPS é uma peça de extrema importância nesse sistema, já que proverá informações para que o sistema consiga, com certa precisão, atingir os objetivos.
 
-O módulo NRF24L01 tem potencia de 2.4Ghz e um alcance de 1000 metros em campo aberto. Com taxa de transmissão de até 2mb/s\footnote{megabit por segundo}. Combinado com o pequeno consumo energético e o tamanho, torna-se ideal para o projeto, representado na figura \ref{fig:fritz:radio}.
+O módulo de rádio NRF24L01 tem potencia de 2.4Ghz e um alcance de 1000 metros em campo aberto. Com taxa de transmissão de até 2mb/s\footnote{megabit por segundo}. Combinado com o pequeno consumo energético e o tamanho, torna-se adequado para o projeto, representado na Figura \ref{fig:fritz:radio}.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{figuras/RADIO.png}
@@ -91,7 +93,7 @@ O módulo NRF24L01 tem potencia de 2.4Ghz e um alcance de 1000 metros em campo a
 
 Serão utilizados dois desses módulos no projeto: um no próprio veículo e outro em um Arduino conectado a um computador, responsável por transmitir dados sobre as coordenadas.
 
-Serão utilizados dois motores elétricos com a finalidade de dar propulsão e direção ao veiculo. Os dois serão controlados através de Arduinos e pontes H L9110.
+Serão utilizados dois motores elétricos para dar propulsão e direção ao veículo. Os dois serão controlados através de Arduinos e pontes H modelo L9110.
 
 \begin{figure}[H]
     \centering
@@ -100,13 +102,13 @@ Serão utilizados dois motores elétricos com a finalidade de dar propulsão e d
     \label{fig:fritz:motor}
 \end{figure}
 
-A fim de operar esse veículo durante horas, será necessário criar um sistema fotovoltaico capaz de alimentar os componentes, bem como armazenar energia em baterias para que o mesmo continue operando mesmo em condições de baixa luminosidade ou até mesmo durante a noite. Para tal, devemos obter as especificações quanto ao consumo elétrico de cada componente, a fim de calcular qual o gasto, a autonomia do sistema, bem como os demais componentes a serem utilizados.
+A fim de operar esse veículo durante horas, será necessário criar um sistema fotovoltaico capaz de alimentar os componentes, bem como armazenar energia em baterias para que o mesmo continue operando mesmo em condições de baixa luminosidade. Para tal, devemos obter as especificações quanto ao consumo elétrico de cada componente, a fim de calcular qual o gasto, a autonomia do sistema, bem como os demais componentes a serem utilizados.
 
-De inicio, deve-se quantificar, bem como obter os dados de todos os componentes do sistema, os quais estão presentes na tabela \ref{cap:proposta:tab:quantificar}:
+De inicio, deve-se quantificar,obter os dados de todos os componentes do sistema, os quais estão presentes na tabela \ref{cap:proposta:tab:quantificar}:
 
 %https://www.tablesgenerator.com/#
 
-\begin{table}[]
+\begin{table}[h!]
 \centering
 \caption{Consumo por 8 horas de uso}
 \label{cap:proposta:tab:quantificar}
@@ -124,7 +126,7 @@ De inicio, deve-se quantificar, bem como obter os dados de todos os componentes 
 \end{tabular}
 \end{table}
 
-Na tabela acima obtemos o consumo total de todos os componentes durante um período de 8 horas. A escolha o Inversor de Corrente Autônomo deve obedecer a uma faixa de potência continua entre 226,98W e 317,78W, baseando-se no calculo feito a partir da potencia instantânea, vista na tabela \ref{cap:proposta:tab:instantaneo}: 
+Na Tabela \ref{cap:proposta:tab:quantificar} obtemos o consumo total de todos os componentes durante um período de 8 horas. A escolha o Inversor de Corrente Autônomo deve obedecer a uma faixa de potência continua entre 226,98W e 317,78W, baseando-se no cálculo feito a partir da potência instantânea, vista na Tabela \ref{cap:proposta:tab:instantaneo}: 
 
 \begin{table}[]
 \centering
@@ -159,7 +161,7 @@ Com isso, podemos calcular a energia real da instalação, sendo:
 Para realizarmos os cálculos, assumimos os valores hipotéticos a uma bateria com as seguintes características apresentadas na tabela \ref{cap:proposta:tab:bateria}:
 \begin{table}[h]
 \centering
-\caption{Bateria hipotética}
+\caption{Bateria}
 \label{cap:proposta:tab:bateria}
 \begin{tabular}{|l|l|}
 \hline
@@ -168,6 +170,7 @@ Para realizarmos os cálculos, assumimos os valores hipotéticos a uma bateria c
 \textbf{Vb}                       & 12V           \\ \hline
 \textbf{CN}                       & 105Ah         \\ \hline
 \textbf{Pd}                       & 0,6           \\ \hline
+\textbf{Peso}                     & 25kg           \\ \hline
 \end{tabular}
 \end{table}
 
@@ -179,13 +182,13 @@ Atentando-se de que as baterias não podem ser descarregadas em sua totalidade, 
 \[CR=\frac{CU}{PD}\]
 \[CR=\frac{22,03}{0,6}\]
 \[CR=36,71Ah\]
-Finalmente, calcula-se o numero de baterias a serem utilizadas pelo sistema, tanto em série como em paralelo:
+Finalmente, calcula-se o número de baterias a serem utilizadas pelo sistema, tanto em série como em paralelo:
 \[NB=\left ( \frac{CR}{CN} \right )*\left ( \frac{Vi}{VB} \right )\]
 \[NB=\left ( \frac{36,71}{105} \right )*\left ( \frac{24}{12} \right )\]
 \[NB=0,699\]
-Como o resultado mostra, uma bateria será o suficiente para todo o sistema, e segundo os cálculos, com sobra.
+Como o resultado mostra, uma bateria será o suficiente para todo o sistema, e segundo os cálculos, com sobra. Vale ressaltar também, que esse projeto terá capacidade de ter suas baterias recarregadas em uma tomada convencional, tendo o sistema fotovoltaico como uma fonte suplementar.
 
-Para se ter um controle situacional em tempo real, fica claro a necessidade de um \textit{software} a ser utilizado pelo operador do veículo a fim de observar seu progresso e informações provenientes de seus sensores e seu posicionamento no campo. A tela deve ser simples e intuitiva, dando enfase ao mapa da área e tornando-se fácil para que novas tarefas e coordenadas sejam inseridas e enviadas para o veículo.
+Para se ter um controle situacional em tempo real, fica claro a necessidade de um \textit{software} a ser utilizado pelo operador do veículo a fim de observar seu progresso e informações provenientes de seus sensores e seu posicionamento no campo. A tela deve ser simples e intuitiva, dando ênfase ao mapa da área e tornando-se fácil para que novas tarefas e coordenadas sejam inseridas e enviadas para o veículo.
 
 \begin{figure}[H]
     \centering
@@ -194,4 +197,4 @@ Para se ter um controle situacional em tempo real, fica claro a necessidade de u
     \label{fig:balsamiq:esboco}
 \end{figure}
 
-Informações sobre a direção e a posição do veículo serão atualizadas na tela, bem como uma visualização do mapa carregado para que possa ser traçadas as áreas de ação  ou caminhos a serem seguidos em momentos de manutenção ou reabastecimento. Um botão de parada emergencial é presente, sendo necessário caso algum dos parâmetros ou até mesmo o comportamento o veículo seja avaliado como impróprio. Uma caixa de seleção se faz presente com o intuito de dar a opção do tipo de tarefa a ser realizado pelo veículo, seja pulverização, plantagem ou apenas translados entre pontos. 
+Informações sobre a direção e a posição do veículo serão atualizadas na tela, bem como uma visualização do mapa carregado para que possa ser traçadas as áreas de ação  ou caminhos a serem seguidos em momentos de manutenção ou reabastecimento. Um botão de parada emergencial está presente, sendo necessário caso algum dos parâmetros ou até mesmo o comportamento o veículo seja avaliado como impróprio. Uma caixa de seleção se faz presente com o intuito de dar a opção do tipo de tarefa a ser realizado pelo veículo.
